# c_focus

./: .gitmodules  Makefile  example.c  example_block.c  meson.build  meson_options.txt
etc/: focus_logger.plist
examples/: common.h  example_block.c  example_callback.c  focus_logger.c
src/: c_focus.h  c_focus.m
